--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -4,8 +4,8 @@
 
 <div id="footer" role="contentinfo">
     <div id="copyright">
-      <p>Copyright &#169; 2008-2016 - {{tpl:lang Design}} {{tpl:lang by}} <a href="http://xtradotfreedotfr.free.fr/blog/" title="Designer, Blogger, Azork.net">Azork</a> {{tpl:lang and}} <a href="https://github.com/brol/demo1">Pierre Van Glabeke</a>
-      <br />{{tpl:SysPoweredBy}} / <a href="http://validator.w3.org/check?uri={{tpl:BlogURL}}" title="{{tpl:lang Check the markup HTML}}">{{tpl:lang HTML5 VALID}}</a> / <a href="http://jigsaw.w3.org/css-validator/check?uri={{tpl:BlogURL}}" title="{{tpl:lang Check the markup CSS}}">{{tpl:lang CSS VALID}}</a></p>
+      <p>Copyright &#169; 2008-2017 - {{tpl:lang Design}} {{tpl:lang by}} <a href="http://xtradotfreedotfr.free.fr/blog/" title="Designer, Blogger, Azork.net">Azork</a> {{tpl:lang and}} <a href="https://github.com/brol/demo1">Pierre Van Glabeke</a>
+      <br />{{tpl:SysPoweredBy}}</p>
     </div>
 </div>
 
