--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -4,7 +4,7 @@
 
 <div id="footer" role="contentinfo">
     <div id="copyright">
-      <p>Copyright &#169; 2008-2017 - {{tpl:lang Design}} {{tpl:lang by}} <a href="http://xtradotfreedotfr.free.fr/blog/" title="Designer, Blogger, Azork.net">Azork</a> {{tpl:lang and}} <a href="https://github.com/brol/demo1">Pierre Van Glabeke</a>
+      <p>{{tpl:lang Design}} {{tpl:lang by}} <a href="http://xtradotfreedotfr.free.fr/blog/" title="Designer, Blogger, Azork.net">Azork</a> {{tpl:lang and}} <a href="https://github.com/brol/demo1">Pierre Van Glabeke</a>
       <br />{{tpl:SysPoweredBy}}</p>
     </div>
 </div>
