--- a/tpl/_more-post.html
+++ b/tpl/_more-post.html
@@ -55,8 +55,7 @@
     </tpl:SysIfCommentPublished>
 
     <tpl:SysIfCommentPending>
-      <div class="message" id="pr">{{tpl:lang Your comment has been submitted and
-      will be reviewed for publication.}}</div>
+      <div class="message" id="pr">{{tpl:lang Your comment has been submitted and will be reviewed for publication.}}</div>
     </tpl:SysIfCommentPending>
 
 <dl id="comment">
