--- a/tpl/page.html
+++ b/tpl/page.html
@@ -87,7 +87,7 @@
 
 <tpl:Block name="wrapper-sidebar">
 	<div id="sidebar" role="complementary">
-  {{tpl:include src="_more-post.html"}}
+  {{tpl:include src="_more-page.html"}}
 		<div id="blognav">
 			{{tpl:Widgets type="nav"}}
 		</div> <!-- End #blognav -->
