--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -1,6 +1,6 @@
 <div id="top" role="banner">
   <div id="header"><h1><span><a href="{{tpl:BlogURL}}">{{tpl:BlogName encode_html="1"}}</a></span></h1>
-  <p class="description">{{tpl:BlogDescription}}</p>
+  <div class="description">{{tpl:BlogDescription}}</div>
   
   <!-- # --BEHAVIOR-- publicTopAfterContent -->
   {{tpl:SysBehavior behavior="publicTopAfterContent"}}
